fix the older author images and don't break the newer ones

--- a/sass/02_molecule/_m-author-info.scss
+++ b/sass/02_molecule/_m-author-info.scss
@@ -14,10 +14,17 @@
 
 		img {
 			max-width: $author-thumb-size;
+			height: 100%;
 
 			@include breakpoint-min( sm ) {
-				max-width: $author-photo-size;
+				//max-width: $author-photo-size;
 			}
+		}
+
+		.a-author-sizes,
+		.a-author-sizes source,
+		.a-author-sizes img {
+			height: auto;
 		}
 	}
 
